vlib/v/checker/tests/import_mod_sub_as_duplicate_err.out
vlib/v/checker/tests/import_mod_sub_as_duplicate_err.vv:3:19: error: cannot import `x.json2` as `json` into a module with the same name
    1 | module json
    2 | 
    3 | import x.json2 as json
      |                   ~~~~
    4 | 
    5 | println(json.Any(json.null))
vlib/v/checker/tests/import_mod_sub_as_duplicate_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module json
      | ^
    2 | 
    3 | import x.json2 as json
