vlib/v/checker/tests/import_mod_sub_as_duplicate_err.vv
module json

import x.json2 as json

println(json.Any(json.null))
